[#1507] add test